--- a/src/app/modules/home/pages/home/home.component.html
+++ b/src/app/modules/home/pages/home/home.component.html
@@ -5,14 +5,17 @@
         <div class="flex flex-row">
             <button class="text-white px-6 rounded-md font-700 text-xl btn_blue_3 btnhover font-semibold ">M'inscrire 😍
             </button>
+
         </div>
     </div>
     <div class="grid md:grid-cols-2 mt-10 container mx-auto lg:px-10">
         <div class="flex flex-col my-auto items-start">
             <div class="flex flex-row">
+
+              
                 <h1
                     class="popping font-extrabold  my-5 animate__animated animate__fadeInUp text-3xl text-black leading-tight sm:text-5xl ">
-                    Le réseau immobilier qui <br>te fait <span class="light-red">gagner du temps </span> </h1>
+                    L'immobilier  <span class="light-red">comme il devrait l'être </span> </h1>
             </div>
         </div>
         <div>
@@ -23,7 +26,7 @@
 </div>
 <div class="px-6 sm:px-8 lg:px-24  mb-5">
     <div class="relative  mt-20 mb-20 ">
-        <div class="grid grid md:grid-cols-2 animate__animated animate__fadeInUp">
+        <div class="grid md:grid-cols-2 animate__animated animate__fadeInUp">
             <img src="../../../../../assets/images/Tenders-assets/IMAGES ILLUSTRATIONS/2.png"
                 class="hidden md:block mx-auto md:mx-0" alt="">
 
@@ -39,13 +42,17 @@
 
                 </div>
 
-                <p class="text-lg text-gray-500 text-lg">Tenders est le premier réseau immobilier qui te fait gagner
-                    du
-                    temps ! Que tu sois locataire, propriétaire ou
-                    professionnel, notre objectif est de te mettre en relation avec tous les acteurs du marché. A
-                    travers une plateforme
-                    fluide et intuitive, tu crées ton profil en quelques clics et tes recherches n’auront jamais été
-                    aussi rapides !</p>
+                <p class="text-lg text-gray-500">Tenders est le réseau immobilier de suisse pensé pour ses acteurs . Aucun intermédiaire ! notre
+                    vocation est de mettre en relation tous les acteurs du marché immobilier afin de permettre un
+                    meilleur échange et à toutes les recherches d’aboutir rapidement. <br> <br> Que vous soyez remetteur
+                    d’un
+                    bien, propriétaire souhaitant louer un objet, ou que vous soyez à la recherche d’un logement, notre
+                    réseau vous mettra en lien direct avec les acteurs qui vous correspondent et vous permettra
+                    d’effectuer une recherche ciblée afin de trouver en un rien de temps le candidat ou le bien parfait
+                    pour vous.  <br><br>Depuis le profil créé
+                    en quelques clics, nos outils proposés sur la plateforme sont véritablement un
+                    assistant de gestion de votre projet. La plateforme prend en charge tout le processus de manière
+                    entièrement digitalisée.</p>
             </div>
         </div>
     </div>
@@ -66,7 +73,7 @@
         </div>
     </div>
 
-    <div class="mt-12 max-w-lg mx-auto grid gap-5 md:grid-cols-3 md:max-w-none">
+    <div class="mt-12 max-w-lg mx-auto grid gap-5 md:grid-cols-2 md:max-w-none">
         <div class="flex flex-col rounded-lg shadow-lg overflow-hidden">
 
             <div class="flex-1 bg-white p-6 flex flex-col justify-between ">
@@ -79,9 +86,7 @@
                             Locataire
                         </p>
                         <p class="mt-3 text-lg text-gray-500 ">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut imperdiet mollis ante ac
-                            eleifend. Fusce mollis hendrerit
-                            mauris et aliquet.
+                           Tenders, la platforme indipensable pour trouver le bien qui vous correspond rapidement.
                         </p>
                     </a>
                 </div>
@@ -106,9 +111,7 @@
                             Propriétaire
                         </p>
                         <p class="mt-3 text-lg text-gray-500">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut imperdiet mollis ante ac
-                            eleifend. Fusce mollis hendrerit
-                            mauris et aliquet.
+                            Tenders, la platforme indipensable pour trouver le candidat qui vous correspond rapidement rapidement.
                         </p>
                     </a>
                 </div>
@@ -120,44 +123,22 @@
 
         </div>
 
-        <div class="flex flex-col rounded-lg shadow-lg overflow-hidden">
 
-            <div class="flex-1 bg-white p-6 flex flex-col justify-between">
-                <div class="flex-1">
-
-                    <a href="#" class="block mt-2">
-                        <img src="../../../../../assets/images/pro.png" class="mb-5" alt="">
-
-                        <p class="text-xl font-bold text-gray-900">
-                            Professionnel
-                        </p>
-                        <p class="mt-3 text-lg text-gray-500">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut imperdiet mollis ante ac
-                            eleifend. Fusce mollis hendrerit
-                            mauris et aliquet.
-                        </p>
-                    </a>
-                </div>
-                <div class="mt-6 flex items-center">
-                    <p class="text-lg popping font-extrabold text--blue mr-5">Commencer </p>
-                    <img src="../../../../../assets/images/right-arrow.png" alt="">
-                </div>
-            </div>
-        </div>
     </div>
     <div class="relative  mt-20 mb-20 animate__animated animate__fadeInUp">
         <div class="grid md:grid-cols-2  gap-14">
             <div class="flex flex-col pt-10 items-start ">
-                <h1 class="text-xl border-bottom-blue popping font-extrabold mb-5">Si tu es locataire</h1>
+                <h1 class="text-xl border-bottom-blue popping font-extrabold mb-5">Si vous êtes à la recherche d'un bien</h1>
                 <div class="flex flex-row">
-                    <h2 class="text-3xl popping font-extrabold leading-snug sm:text-4xl">Trouver des <span
-                            class="light-red">biens</span>
-                        qui <br> <span class="light-red">vous correspondent</span> </h2>
+                    <h2 class="text-3xl popping font-extrabold leading-snug sm:text-4xl">Trouvez
+                        <span class="light-red">ce qui vous correspond</span>
+                    </h2>
                     <!-- <img src="../../../../../assets/images/bulle5.png" class="-translate-y-16 height-100" alt=""> -->
                 </div>
-                <p class="mt-5 text-lg text-gray-500">Proin congue metus faucibus tellus blandit ultricies. Interdum
-                    et malesuada fames ac ante ipsum primis in faucibus.
-                    Interdum et malesuada fames ac ante ipsum primis in faucibus.</p>
+                <p class="mt-5 text-lg text-gray-500">Vous êtes à la recherche d’un logement ? Tenders cible
+                    votre recherche et vous propose les biens adaptés pour vous.
+
+                </p>
             </div>
 
             <img src="../../../../../assets/images/Tenders-assets/MOCKUPS/trouver-un-bien.png"
@@ -176,33 +157,59 @@
             <div class="flex flex-col pt-0 xl:pt-10 items-start"> -->
 
                 <div class=" flex flex-row">
-                    <h1 class="text-3xl mt-3 popping font-extrabold leading-normal sm:text-4xl"> <span
-                            class="text--blue">Postule</span>
-                        et consulte en temps réel <span class="text--blue">la progression de ton dossier</span> </h1>
+                    <h1 class="text-3xl mt-3 popping font-extrabold leading-normal sm:text-4xl">
+                        Postulez et consultez en temps réel <span class="text--blue">la progression de votre dossier</span> </h1>
                     <!-- <img src="../../../../../assets/images/bulle6.png"
                         class="-translate-y-20 -translate-x-10 height-100" alt=""> -->
                 </div>
 
-                <p class="mt-5 text-lg text-gray-500">Que ce soit pour celui qui recherche un bien ou celui qui
-                    Integer vel laoreet diam, eu dignissim ligula. Ut sit amet libero purus. Praesent rhoncus justo eu
-                    dolor posuere
-                    maximus. Phasellus pulvinar facilisis.</p>
+                <p class="mt-5 text-lg text-gray-500">Postulez depuis la plateforme et gérez la progression
+                    du processus. Plus qu’un réseau, c’est votre
+                    assistant de recherche digital. </p>
+            </div>
+        </div>
+
+        <div class="relative  mt-20 mb-20 animate__animated animate__fadeInUp ">
+            <div class="grid md:grid-cols-2  gap-14">
+
+                <div class="flex flex-col pt-10 items-start ">
+                    <div class="flex flex-row">
+                        <h2 class="text-4xl popping font-extrabold leading-snug ">Gèrez <span class="light-red">vos
+                                visites</span>
+                        </h2>
+                        <img src="../../../../../assets/images/bulle9.png" class="-translate-y-16" height="100px"
+                            alt="">
+                    </div>
+
+                    <p class="text-lg text-gray-500">Notre plateforme offre un accompagnement complet et totalement
+                        digitalisé pour que votre
+                        expérience soit la plus agréable possible. Et cela de la planification de la visite via votre
+                        agenda en
+                        ligne, au dépôt du dossier complet et suivi de l’avancement.</p>
+                </div>
+                <img src="../../../../../assets/images/Tenders-assets/MOCKUPS/mes visites.png"
+                    class="mx-auto md:mx-0 shadow-lg" alt="">
+
             </div>
         </div>
     </div>
 
     <div class="relative  mt-20 mb-20 animate__animated animate__fadeInUp">
-        <div class="grid md:grid-cols-2 grid-flow-colgap-14">
+        <div class="grid md:grid-cols-2 grid-flow-scolgap-14">
             <div class="flex flex-col pt-10 items-start ">
-                <h1 class="text-xl border-bottom-red popping font-extrabold mb-5">Pour les remetteurs</h1>
+                <h1 class="text-xl border-bottom-red popping font-extrabold mb-5">Vous êtes remetteur ou propriétaire</h1>
                 <div class="flex flex-row ">
-                    <h2 class=" popping font-extrabold  leading-snug text-3xl sm:text-4xl ">Publie <span
-                            class="light-yellow">tes biens<br>immobiliers</span></h2>
+                    <h2 class=" popping font-extrabold  leading-snug text-3xl sm:text-4xl ">Publiez <span
+                            class="light-yellow">vos biens<br>immobiliers</span></h2>
                 </div>
 
-                <p class="mt-5 text-lg text-gray-500">Proin congue metus faucibus tellus blandit ultricies. Interdum
-                    et malesuada fames ac ante ipsum primis in faucibus.
-                    Interdum et malesuada fames ac ante ipsum primis in faucibus.</p>
+                <p class="mt-5 text-lg text-gray-500 mb-10">Pour celui qui recherche un/des candidat(s), notre plateforme
+                    offre un accompagnement complet. Il
+                    vous suffit de vous connecter et de publier votre bien.
+                    <br><br>
+                    Tenders vous accompagne dans la publication de votre bien en vous proposant une serie d'information
+                    à remplir afin de maximiser vos chance pour trouver le/les candidat(s) qui vous correspond le plus.
+                </p>
             </div>
             <img src="../../../../../assets/images/Tenders-assets/MOCKUPS/32. nouveau_bien7.png"
                 class="mx-auto md:mx-0 rounded-2xl shadow-lg" alt="">
@@ -216,60 +223,52 @@
 
             <div class="flex flex-col pt-10 items-start ">
                 <div class="flex flex-row">
-                    <h2 class=" popping font-extrabold leading-snug text-3xl sm:text-4xl ">Reçois des <span
-                            class="text--blue">candidatures</span> <br>
-                        <span class="text--blue">préalablement
-                            examinées</span> par la
-                        plateforme
+                    <h2 class=" popping font-extrabold leading-snug text-3xl sm:text-4xl ">Vous souhaitez trouver
+                        <span class="text--blue">le candidat idéal ?</span>
                     </h2>
                     <img src="../../../../../assets/images/bulle8.png"
                         class="-translate-y-20 -translate-x-16 height-100" alt="">
                 </div>
 
-                <p class="mt-5 text-lg text-gray-500">Proin congue metus faucibus tellus blandit ultricies. Interdum
-                    et malesuada fames ac ante ipsum primis in faucibus.
-                    Interdum et malesuada fames ac ante ipsum primis in faucibus.</p>
+                <p class="mt-5 text-lg text-gray-500">
+                    Les algorithmes développés pour notre plateforme permettent, aux remetteur de bail et aux
+                    propriétaires désireux de louer leur bien, une sélection, un tri minutieux des dossiers de
+                    candidatures.
+                    <br> <br>
+                    Nous nous assurons de la conformité des informations communiquées
+                    avec les documents téléchargés et ne proposons que des dossiers en accord avec les critères
+                    d’éligibilité appliqués. De ce fait, nous pouvons limiter le nombre de dossiers de candidatures (5
+                    dossiers maximum).
+                    <br><br>
+                    Cette sélection évite aux remetteurs et propriétaires d’avoir trop de dossiers à
+                    traiter et offre aux demandeurs davantage de chances d’être retenus. De plus, pour ces derniers,
+                    cela
+                    représente un énorme gain de temps en les accompagnant et en les orientant vers ce à quoi ils
+                    peuvent réellement prétendre.
+                </p>
             </div>
 
         </div>
     </div>
-    <div class="relative  mt-20 mb-20 animate__animated animate__fadeInUp ">
-        <div class="grid md:grid-cols-2  gap-14">
 
-            <div class="flex flex-col pt-10 items-start ">
-                <div class="flex flex-row">
-                    <h2 class="text-4xl popping font-extrabold leading-snug ">Gère <span class="light-red">tes
-                            visites</span>
-                    </h2>
-                    <img src="../../../../../assets/images/bulle9.png" class="-translate-y-16" height="100px" alt="">
-                </div>
-
-                <p class="text-lg text-gray-500">Que ce soit pour celui qui recherche un bien ou celui qui
-                    recherche un des candidats(s), notre plateforme offre un
-                    accompagnement complet et totalement digitalisé</p>
-            </div>
-            <img src="../../../../../assets/images/Tenders-assets/MOCKUPS/mes visites.png"
-                class="mx-auto md:mx-0 shadow-lg" alt="">
-
-        </div>
-    </div>
     <div class="relative  mt-20 mb-20 animate__animated animate__fadeInUp">
         <div class="grid md:grid-cols-2  gap-14">
-            <img src="../../../../../assets/images/Tenders-assets/MOCKUPS/9. accueil.png"
-                class="mx-auto md:mx-0 shadow-lg" class="order-last md:order-first" alt="">
+            <img src="../../../../../assets/images/network.png" class="mx-auto md:mx-0 shadow-lg"
+                class="order-last md:order-first" alt="">
 
             <div class="flex flex-col pt-10 items-start ">
                 <h1 class="text-xl border-bottom-red popping font-extrabold mb-5">Un réseau immobilier</h1>
                 <div class="flex flex-row">
-                    <h2 class="text-4xl popping font-extrabold leading-snug">Des centaines de <br> <span
-                            class="text-purple">publications</span> par jour</h2>
+                    <h2 class="text-4xl popping font-extrabold leading-snug">Intéragissez avec <br> <span
+                            class="text-purple">votre réseau</span></h2>
                     <!-- <img src="../../../../../assets/images/bulle10.png"
                         class="-translate-y-20 md:-translate-y-14 md:-translate-x-9" height="100px" alt=""> -->
                 </div>
 
-                <p class="mt-5 text-lg text-gray-500">Proin congue metus faucibus tellus blandit ultricies. Interdum
-                    et malesuada fames ac ante ipsum primis in faucibus.
-                    Interdum et malesuada fames ac ante ipsum primis in faucibus.</p>
+                <p class="mt-5 text-lg text-gray-500">Tenders supprime les intermédiaires et vous permet de créer des liens directs 
+                avec ceux dont vous avez besoin pour faire aboutir vos recherches rapidement. <br><br>
+
+                </p>
             </div>
 
         </div>
