--- a/src/app/modules/landing/pages/landing/landing.component.html
+++ b/src/app/modules/landing/pages/landing/landing.component.html
@@ -15,8 +15,7 @@
                 alt="">
             <h2
                 class="popping font-extrabold  my-5 animate__animated animate__fadeInUp text-3xl text-black leading-tight sm:text-4xl leading-20 animate__animated animate__fadeInUp  ">
-                Content de savoir que vous <br> allez faire partie de <br> l’aventure
-                notre communauté</h2>
+                Heureux vous savoir dans <br> <span class="text-blue-300">notre communauté</span>  </h2>
 
         </div>
         <div class="justify-self-center">
