--- a/src/app/modules/landing/pages/landing/landing.component.html
+++ b/src/app/modules/landing/pages/landing/landing.component.html
@@ -1,4 +1,4 @@
-<div class="  px-6 sm:px-8  pt-16 mb-5 lg:px-20"
+<div class="  px-6 sm:px-8  pt-16 mb-5 lg:px-24"
     style="background: linear-gradient(180deg, rgba(191, 116, 223, 0.25) 0%, rgba(223, 125, 125, 0) 100%);background-size: 10vh;">
 
     <div class="flex justify-between mb-20 container px-18">
@@ -27,7 +27,7 @@
     </div>
 </div>
 
-<div class=" px-6 sm:px-8  pt-8  mb-5 lg:px-20">
+<div class=" px-6 sm:px-8  pt-8  mb-5 lg:px-24">
     <!--    <input type="email" name="email" id="email" placeholder="Votre email"
             class="py-3 mt-2 px-4 w-full block shadow-sm text-warm-gray-900 focus:ring-blue-300	 focus:border-blue-100 border-warm-gray-200 rounded-xl placeholder-200"> -->
     <div class=" max-w-4xl mt-5 md:-mt-16 ">
@@ -36,39 +36,41 @@
                 Renseigner vos informations
             </h2>
         </div>
-        <form class="grid grid-cols-1 gap-y-6 sm:grid-cols-2 sm:gap-x-8">
+        <form class="grid grid-cols-1 gap-y-6 sm:grid-cols-2 sm:gap-x-8" [formGroup]="landingForm"
+            (ngSubmit)="onSubmit()">
             <div>
                 <label for="nom" class="block text-sm font-medium text-gray-700">Votre nom</label>
                 <div class="mt-1">
-                    <input type="text" name="nom" id="nom" placeholder="Votre nom"
+                    <input type="text" name="nom" id="nom" placeholder="Votre nom" formControlName="nom"
                         class="py-3 mt-2 px-4 w-full  block shadow-sm text-warm-gray-900 focus:ring-blue-300	 focus:border-blue-100 border-warm-gray-200 rounded-xl placeholder-200">
                 </div>
             </div>
             <div>
                 <label for="prenom" class="block text-sm font-medium text-gray-700">Votre Prénom</label>
                 <div class="mt-1">
-                    <input type="text" name="prenom" id="prenom" placeholder="Votre prénom"
+                    <input type="text" name="prenom" id="prenom" placeholder="Votre prénom" formControlName="prenom"
                         class="py-3 mt-2 px-4 w-full  block shadow-sm text-warm-gray-900 focus:ring-blue-300	 focus:border-blue-100 border-warm-gray-200 rounded-xl placeholder-200">
                 </div>
             </div>
             <div>
                 <label for="telephone" class="block text-sm font-medium text-gray-700">Téléphone</label>
                 <div class="mt-1">
-                    <input type="text" name="telephone" id="telephone" placeholder="Votre téléphone"
+                    <input type="text" name="telephone" id="telephone" placeholder="Votre téléphone +41...."
+                        formControlName="telephone"
                         class="py-3 mt-2 px-4 w-full  block shadow-sm text-warm-gray-900 focus:ring-blue-300	 focus:border-blue-100 border-warm-gray-200 rounded-xl placeholder-200">
                 </div>
             </div>
             <div>
                 <label for="last-name" class="block text-sm font-medium text-gray-700">Email</label>
                 <div class="mt-1">
-                    <input type="email" name="email" id="email" placeholder="Votre email"
+                    <input type="email" name="email" id="email" placeholder="Votre email" formControlName="email"
                         class="py-3 mt-2 px-4 w-full  block shadow-sm text-warm-gray-900 focus:ring-blue-300	 focus:border-blue-100 border-warm-gray-200 rounded-xl placeholder-200">
                 </div>
             </div>
             <div class="mt-6">
-                <button
+                <button [disabled]="landingForm.invalid"
                     class="text-white text-sm py-3 px-9 popping font-extrabold  bg-blue hover:bg-blue-600 rounded-xl active:-translate-y-1">
-                    Envoyer</button>
+                    Envoyer {{landingForm.invalid}}</button>
             </div>
 
         </form>
