form error handling

--- a/src/app/modules/landing/pages/landing/landing.component.html
+++ b/src/app/modules/landing/pages/landing/landing.component.html
@@ -15,7 +15,7 @@
                 alt="">
             <h2
                 class="popping font-extrabold  my-5 animate__animated animate__fadeInUp text-3xl text-black leading-tight sm:text-4xl leading-20 animate__animated animate__fadeInUp  ">
-                Heureux vous savoir dans <br> <span class="text-blue-300">notre communauté</span>  </h2>
+                Heureux vous savoir dans <br> <span class="text-blue-300">notre communauté</span> </h2>
 
         </div>
         <div class="justify-self-center">
@@ -41,14 +41,22 @@
                 <label for="nom" class="block text-sm font-medium text-gray-700">Votre nom</label>
                 <div class="mt-1">
                     <input type="text" name="nom" id="nom" placeholder="Votre nom" formControlName="nom"
-                        class="py-3 mt-2 px-4 w-full  block shadow-sm text-warm-gray-900 focus:ring-blue-300	 focus:border-blue-100 border-warm-gray-200 rounded-xl placeholder-200">
+                        [ngClass]=" nom?.invalid && nom?.touched ? 'border-red-500' : 'border-blue-100'"
+                        class="py-3 mt-2 px-4 w-full  block shadow-sm text-warm-gray-900   border-warm-gray-200 rounded-xl placeholder-200">
+                    <div *ngIf="nom?.touched && nom?.invalid" class="text-left mt-1">
+                        <div class="text-red-600" *ngIf="nom?.errors?.required">Le nom est obligatoire.</div>
+                    </div>
                 </div>
             </div>
             <div>
                 <label for="prenom" class="block text-sm font-medium text-gray-700">Votre Prénom</label>
                 <div class="mt-1">
                     <input type="text" name="prenom" id="prenom" placeholder="Votre prénom" formControlName="prenom"
+                        [ngClass]=" prenom?.invalid && prenom?.touched ? 'border-red-500' : 'border-blue-100'"
                         class="py-3 mt-2 px-4 w-full  block shadow-sm text-warm-gray-900 focus:ring-blue-300	 focus:border-blue-100 border-warm-gray-200 rounded-xl placeholder-200">
+                    <div *ngIf="prenom?.touched && prenom?.invalid" class="text-left mt-1">
+                        <div class="text-red-600" *ngIf="prenom?.errors?.required">Le prénom est obligatoire.</div>
+                    </div>
                 </div>
             </div>
             <div>
@@ -56,20 +64,32 @@
                 <div class="mt-1">
                     <input type="text" name="telephone" id="telephone" placeholder="Votre téléphone +41...."
                         formControlName="telephone"
-                        class="py-3 mt-2 px-4 w-full  block shadow-sm text-warm-gray-900 focus:ring-blue-300	 focus:border-blue-100 border-warm-gray-200 rounded-xl placeholder-200">
+                        [ngClass]=" telephone?.invalid && telephone?.touched ? 'border-red-500' : 'border-blue-100'"
+                        class="py-3 mt-2 px-4 w-full  block shadow-sm text-warm-gray-900 focus:ring-blue-300  focus:border-blue-100 border-warm-gray-200 rounded-xl placeholder-200">
+                    <div *ngIf="telephone?.touched && telephone?.invalid" class="text-left mt-1">
+                        <div class="text-red-600" *ngIf="telephone?.errors?.required">Le télépgone est obligatoire.
+                        </div>
+                    </div>
                 </div>
             </div>
             <div>
                 <label for="last-name" class="block text-sm font-medium text-gray-700">Email</label>
                 <div class="mt-1">
                     <input type="email" name="email" id="email" placeholder="Votre email" formControlName="email"
-                        class="py-3 mt-2 px-4 w-full  block shadow-sm text-warm-gray-900 focus:ring-blue-300	 focus:border-blue-100 border-warm-gray-200 rounded-xl placeholder-200">
+                        [ngClass]=" email?.invalid && email?.touched ? 'border-red-500' : 'border-blue-100'"
+                        class="py-3 mt-2 px-4 w-full  block shadow-sm text-warm-gray-900 focus:ring-blue-300  focus:border-blue-100 border-warm-gray-200 rounded-xl placeholder-200">
+                    <div *ngIf="email?.touched && email?.invalid" class="text-left mt-1">
+                        <span class="text-red-600" *ngIf="email?.errors?.required">L'email est obligatoire.
+                        </span>
+                        <span class="text-red-600" *ngIf="email?.errors?.email">L'email est invalid.
+                        </span>
+                    </div>
                 </div>
             </div>
             <div class="mt-6">
                 <button [disabled]="landingForm.invalid"
                     class="text-white text-sm py-3 px-9 popping font-extrabold  bg-blue hover:bg-blue-600 rounded-xl active:-translate-y-1">
-                    Envoyer {{landingForm.invalid}}</button>
+                    Envoyer </button>
             </div>
 
         </form>
