--- a/src/app/modules/shared/footer/footer.component.html
+++ b/src/app/modules/shared/footer/footer.component.html
@@ -85,17 +85,11 @@
             <p class="text-lg text-gray-400 text-center">
                 &copy; Copyright Tenders - Tous droits réservés.
             </p>
-       
             <br>
-          <p class="text-center text-gray-400" ref="#">info@tendersapp.ch</p>
-         <br>
+            <p class="text-center text-gray-400" ref="#">info@tendersapp.ch</p>
+            <br>
             <div class="flex justify-center">
-          
-
-                    
-              
-            
-                <a href="#" class="text-gray-400 hover:text-gray-500">
+                <a href="#" class="text-gray-400 hover:text-gray-500 mr-2">
                     <span class="sr-only">Facebook</span>
                     <svg class="h-6 w-6" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true">
                         <path fill-rule="evenodd"
@@ -103,10 +97,8 @@
                             clip-rule="evenodd" />
                     </svg>
                 </a>
-          
                 <div>
-
-                    <a href="#" class="text-gray-400 hover:text-gray-500">
+                    <a href="#" class="text-gray-400 hover:text-gray-500 ">
                         <span class="sr-only">Instagram</span>
                         <svg class="h-6 w-6" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true">
                             <path fill-rule="evenodd"
@@ -114,11 +106,8 @@
                                 clip-rule="evenodd" />
                         </svg>
                     </a>
-    
                 </div>
             </div>
-
-            
         </div>
     </div>
 </footer>
