--- a/src/app/modules/shared/footer/footer.component.html
+++ b/src/app/modules/shared/footer/footer.component.html
@@ -24,7 +24,6 @@
                                 clip-rule="evenodd" />
                         </svg>
                     </a>
-
                 </div>
             </div>
             <div class="mt-12 grid grid-cols-1 gap-8 xl:mt-0 xl:col-span-2">
@@ -39,7 +38,6 @@
                                     Accueil
                                 </a>
                             </li>
-
                             <li>
                                 <a href="#" class="text-lg text-gray-500 hover:text-gray-900">
                                     A propos
@@ -69,7 +67,6 @@
                                     Politique de confidentialité
                                 </a>
                             </li>
-
                             <li>
                                 <a href="#" class="text-lg text-gray-500 hover:text-gray-900">
                                     Termes et conditions
@@ -77,7 +74,6 @@
                             </li>
                         </ul>
                     </div>
-
                 </div>
             </div>
         </div> -->
@@ -85,8 +81,17 @@
             <p class="text-lg text-gray-400 text-center">
                 &copy; Copyright Tenders - Tous droits réservés.
             </p>
-            <div>
-                <a href="#" class="text-gray-400 hover:text-gray- 500">
+
+            <br>
+            <p class="text-center text-gray-400" ref="#">info@tendersapp.ch</p>
+            <br>
+            <div class="flex justify-center">
+
+
+
+
+
+                <a href="#" class="text-gray-400 hover:text-gray-500 mr-2">
                     <span class="sr-only">Facebook</span>
                     <svg class="h-6 w-6" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true">
                         <path fill-rule="evenodd"
@@ -94,8 +99,10 @@
                             clip-rule="evenodd" />
                     </svg>
                 </a>
+
                 <div>
-                    <a href="#" class="text-gray-400 hover:text-gray-500 ">
+
+                    <a href="#" class="text-gray-400 hover:text-gray-500">
                         <span class="sr-only">Instagram</span>
                         <svg class="h-6 w-6" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true">
                             <path fill-rule="evenodd"
@@ -103,5 +110,11 @@
                                 clip-rule="evenodd" />
                         </svg>
                     </a>
+
                 </div>
             </div>
+
+
+        </div>
+    </div>
+</footer>
