landing page text edit

--- a/src/app/modules/landing/pages/landing/landing.component.html
+++ b/src/app/modules/landing/pages/landing/landing.component.html
@@ -15,7 +15,7 @@
                 alt="">
             <h2
                 class="popping font-extrabold  my-5 animate__animated animate__fadeInUp text-3xl text-black leading-tight sm:text-4xl leading-20 animate__animated animate__fadeInUp  ">
-                Heureux de vous savoir dans <br> <span class="text-blue-300">notre communauté</span> </h2>
+                Heureux de vous avoir dans <br> <span class="text-blue-300">notre communauté</span> </h2>
 
         </div>
         <div class="justify-self-center">
